--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --exec node --loader ts-node/esm src/server.ts",
-    "seed": "ts-node src/seeds/joke.seed.ts"
+    "seed": "ts-node src/seeds/joke.seed.ts",
+    "setup": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
